# sandboxpilot

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: CONFIG.md
docs/RUNBOOKS/: incident.md  rotate.md
examples/axe/: README.md  config.toml
examples/axe/capsules/: arena.js  intel.js  keep.js  observer.js  pulseai.js  site.js
examples/minimal/: config.toml
src/sandboxpilot/: __init__.py  capture.py  cli.py  config.py  guard.py  prompts.py  server.py
tests/: test_capture_isolation.py  test_config.py  test_guard.py  test_prompts.py
tools/: soak.py
widget/: embed.js
