[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sandboxpilot"
version = "0.1.0"
description = "A drop-in sandboxed AI pilot for any web property. Security sandbox, playground sandbox, learning sandbox — three at once."
readme = "README.md"
authors = [{ name = "AXE Technologies", email = "team@axetechnologies.ca" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fastapi >= 0.110",
  "uvicorn[standard] >= 0.27",
  "httpx >= 0.27",
  "pydantic >= 2",
  "tomli >= 2; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest >= 7", "ruff >= 0.4", "httpx >= 0.27"]
rate-limit = ["slowapi >= 0.1"]

[project.scripts]
sandboxpilot = "sandboxpilot.cli:main"

[project.urls]
Homepage = "https://github.com/axe-ai/sandboxpilot"
Repository = "https://github.com/axe-ai/sandboxpilot"
Documentation = "https://github.com/axe-ai/sandboxpilot/tree/main/docs"
Issues = "https://github.com/axe-ai/sandboxpilot/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sandboxpilot = ["widget/*.js", "widget/*.css"]

[tool.ruff]
line-length = 110
target-version = "py39"
